# pseudoregalia-multiplayer

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  installing-the-mod.md  running-the-server.md  todo.md
client/: CMakeLists.txt
client/PseudoregaliaMultiplayerMod/: CMakeLists.txt  dllmain.cpp  server-message-schema.json  settings.tmpl.toml
client/PseudoregaliaMultiplayerMod/include/: Client.hpp  Logger.hpp  PropertyHelpers.hpp  ST_PlayerInfo.hpp  Settings.hpp  UdpSocket.hpp
client/PseudoregaliaMultiplayerMod/src/: Client.cpp  Logger.cpp  Settings.cpp
client/pseudoregalia/Content/Meshes/Characters/: dreamLady_pro.uasset  sybil_spiritForm.uasset
client/pseudoregalia/Content/Mods/PseudoregaliaMultiplayerMod/: BP_PM_Ghost.uasset  BP_PM_Manager.uasset  BP_PseudoMultiplayerGhost.uasset  BP_PseudoMultiplayerManager.uasset  F_PlayerInfo.uasset  ModActor.uasset  PlayerInfo.uasset  ST_PlayerInfo.uasset
client/pseudoregalia/Content/Mods/PseudoregaliaMultiplayerMod/SemplicitaFontName/: FontName.uasset  Semplicita_Medium_Font.uasset
client/pseudoregalia/Content/VFX/Systems/: NS_GoldAura.uasset  NS_SmallUpgradeAura.uasset
docs/: application-protocol.md  build-instructions.md  mod-installation.md  project-anatomy.md  todo.md
server/: Cargo.toml  server
server/src/: main.rs  message.rs  serve.rs  state.rs
server/src/serve/: stdin.rs  tcp.rs  udp.rs
