[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14.0"
tokio = { version = "1.0.0", features = ["full"] }
tokio-tungstenite = "=0.27.0"
